--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ message(STATUS "OpenCV Libs: \n${OpenCV_LIBS}\n")
 message(STATUS "OpenCV Libraries: \n${OpenCV_LIBRARIES}\n")
 message(STATUS "OpenCV Headers: \n${OpenCV_INCLUDE_DIRS}\n")
 
-set(TensorRT_ROOT /home/xtxk/TensorRT-10.2.0.19)
+set(TensorRT_ROOT /home/xxx/TensorRT-10.2.0.19)
 # set(TensorRT_ROOT /home/TensorRT10)
 set(TensorRT_INCLUDE_DIRS ${TensorRT_ROOT}/include)
 set(TensorRT_LIBRARIES ${TensorRT_ROOT}/lib)
